# buildroot.rk3399.external

./: .gitignore  Config.in  README.md  external.desc  external.mk  setup.sh  users.txt
board/nanopi-neo4/: boot.cmd  bootVolumio.cmd  genimage.cfg  kernel.fragment  mkRk3399Loader.bin.sh  mkRk3399Trust.bin.sh  mkRk3399Volumio.bin.sh  parameter.txt  post-build.sh  post-image.sh  uboot.fragment  vars.txt  varsVolumio.txt
configs/: neo4_custom_defconfig
configs/rockchip/: audio.config  base.config  base_extra.config  benchmark.config  bt.config  camera.config  camera_gst.config  debug.config  gpu.config  qt.config  qt_app.config  recovery.config  rk3128_arm.config  rk3326_arm.config  rk3326_arm64.config  video_ffmpeg.config  video_gst.config  wifi.config
overlays/etc/: wpa_supplicant.conf
overlays/root/: jackdStart.sh
package/: Config.in  package.mk  qt5webview.tgz
package/example-module-overlay/: example-module-overlay.mk
package/libmali/: Config.in  libmali.mk
package/nanopi_scripts/: Config.in  S60weston  nanopi_scripts.mk  setupWeston.sh  startWeston.sh  stopWeston.sh
package/qt5webview/: qt5webview.hash
package/rkbin/: rkbin.mk
package/rockchip/: Config.in
package/rockchip/modeset/src/: CMakeLists.txt  bootanimation.cpp
package/sd-fuse-rk3399/: Config.in  sd-fuse-rk3399.mk
package/weston/: 0003-compositor-set-DEFAULT_REPAINT_WINDOW-15.patch  0004-Revert-libweston-desktop-xdg_shell_v6-Send-error-on-.patch
patches/: libdrm.tgz
patches/libdrm/: 0004-drm_fourcc-add-DRM_FORMAT_NV12_10.patch  0005-CHROMIUM-libdrm-add-support-for-rockchip.patch  (+3 more)
(+258 files in other folders)
